# Rattler

./: CMakeLists.txt
.github/workflows/: build-macos.yml
Assets/Presets/Factory/: broken_speaker.rattlerpreset  clinking glass.rattlerpreset  concrete club.rattlerpreset  creak.rattlerpreset  creature.rattlerpreset  crushed barrel.rattlerpreset  danger.rattlerpreset  eeeeyah.rattlerpreset  frog tone.rattlerpreset  ghostly.rattlerpreset  next room.rattlerpreset  noise burst.rattlerpreset  rumble.rattlerpreset  screech.rattlerpreset  shakin the room.rattlerpreset  something's definitely broken.rattlerpreset  spit.rattlerpreset  squids.rattlerpreset  telephone.rattlerpreset  wah.rattlerpreset  zap.rattlerpreset
Source/: BounceModel.h  DebugLog.h  FilterXYPad.h  IRManager.cpp  IRManager.h  IRPreviewComponent.h  ModalRattleModel.h  ModalResonatorModel.h  ModelCommon.h  Models.h  NoiseModel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  ResonatorModel.h  SampleManager.cpp  SampleManager.h  SampleModel.h  SamplePreviewComponent.h  TriggerXYPad.h  TuneDecayPad.h  XYPadBase.h
